--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Hit URL
       run: |
         echo "Running cron job at $(date)"
-        curl -X GET "https://tria.page.gd/cron_reminder.php?token=ibetyung"
+        curl -X GET "https://tria.page.gd/cron_reminder.php"
         echo "Cron job completed!"
